# career-site-v2

./: README.md  app.py  ca.pem  database.py  pyproject.toml
templates/: footer.html  home.html  jobitems.html  nav.html
